# containerdJavaGrpc

./: .gitignore  pom.xml
bootstrap/: Makefile  README.md  bootstrap.yaml  hosts  requirements.txt  setup.cfg  setup.py
bootstrap/bootstrap/: cmd.py  custom.py  deploy.py
bootstrap/demo/inventory/: hostsDemo
bootstrap/group_vars/: all  dbserver
bootstrap/roles/agent/tasks/: main.yaml
bootstrap/roles/controller/tasks/: main.yaml
bootstrap/roles/minio/tasks/: main.yaml
bootstrap/roles/mysql/tasks/: main.yaml
bootstrap/src/: __init__.py
bootstrap/src/main/: __init__.py  bootstrap.py  cmd.py  swbs.py
bootstrap/src/playbook/roles/: README.md
containerd-build/: pom.xml  readme.md
containerdTest/: pom.xml
containerdTest/src/main/java/test/: ContainerdClientExample.java  MainApplication.java  RuntimeCMD.java  TestDocker.java
containerdTest/tmp/containerd_protos/: readme.md
containerdTest/tmp/containerd_protos/github.com/containerd/: readme.md
dockerTest/: pom.xml  readme.md
dockerTest/src/main/resources/: application.yaml  docker-java.properties  nvidia-info-demo.xml
dockerTest/src/main/resources/static/: index.html
java-image/: pom.xml
java-image/src/main/java/hello/: Application.java
javaBase/: pom.xml
javaBase/src/main/java/com.test/: AtomicTest.java  BaseTest.java  FileUtil.java  TarFileUtil.java
kafkaTest/: pom.xml
ssl-for-springboot/: README.MD  pom.xml
ssl-for-springboot/src/main/resources/: application.yaml  banner.txt  gxx.p12
stateMachine/: pom.xml
web-server/: pom.xml
web-ui/: package.json  pom.xml
(+17 files in other folders)
