[metadata]
name = sw-bootstrap-test
version = 0.0.1
author = star G
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
entry_points="""
      [console_scripts]
      swbs = src.main.bootstrap:bootstrap
      bootstrap = src.main.bootstrap.cli:bootstrap
      """,
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src